@@ -154,6 +154,10 @@ API Changes
 * LUCENE-6884: Analyzer.tokenStream() and Tokenizer.setReader() are no longer
   declared as throwing IOException. (Alan Woodward)
 
+* LUCENE-6849: Expose IndexWriter.flush() method, to move all
+  in-memory segments to disk without opening a near-real-time reader
+  nor calling fsync (Robert Muir, Simon Willnauer, Mike McCandless)
+
 Optimizations
 
 * LUCENE-6708: TopFieldCollector does not compute the score several times on the
